# cppLib

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  aoc_2020_10.py  aoc_2020_11.py  aoc_2020_2.py  aoc_2020_3.py  aoc_2020_4.py  aoc_2020_5.py  aoc_2020_6.py  aoc_2020_7.py  aoc_2020_8.py  aoc_2020_9.py  clean.sh  doformat.sh  example.txt  input7.txt  main.cc  main_old  occurance.cc  quickinstall.sh
.githooks/: pre-commit
easy/: easy.h
euler/: CMakeLists.txt  combinations.cpp  combinations.h  combinatorics.cpp  digits.cpp  euler.h  functions.cpp  numbersplit.h  permutations.cpp  permutations.h  roman.cpp  triples.cpp
euler/combinations/: binomcoeff.cc  combinations.cpp  combinations.h  constructor.cc  factorial.cc  reset.cc  vec2num.cc  yield.cc  yieldnumber.cc
euler/combinatorics/: combinations.cpp  combinations.h  numbersplit.cpp  numbersplit.h  partitions.cpp  permutations.cpp  permutations.h
euler/contfrac/: contfrac.h  fromfrac.cpp  fromsqrt.cpp  tofrac.cpp  tosqrt.cpp
euler/functions/: binomcoeff.cc  countdigits.cc  dec2roman.cc  factorial.cc  firstndigits.cc  firstndigits1.cc  firstndigits2.cc  gcd.cc  genalltriples.cc  genfibonacci.cc  genpandigital.cc  genprimtriples.cc  iscoprime.cc  isjuf.cc  ispalindrome.cc  isperfect.cc  ispermutationof.cc  issquare.cc  lastndigits.cc  lcm.cc  nthdigit.cc  number2vector.cc  numdigits.cc  partition1.cc  partition2.cc  radix.cc  roman2dec.cc  sumdigits.cc
euler/math/: binomcoeff.cc  factorial.cc  fastpow.cc  intlog10.cc  math.h  modinverse.cc  mulmod.cc  powmod.cc
euler/math/fractions/: fractions.h  op-insert1.cc  op-insert2.cc  op-move.cc  reduce.cc
euler/numbersplit/: constructor.cc  numbersplit.cpp  numbersplit.h  yieldnext.cc
euler/permutations/: constructor.cc  factorial.cc  permutations.cpp  permutations.h  reset.cc  vec2num.cc  yield.cc  yieldnumber.cc
euler/primetools/: constructor.cc  constructor.cpp  divisorsum.cc  divisorsum.cpp  expand.cc  expand.cpp  factorall.cc  factorall.cpp  factorprime.cc  factorprime.cpp  factorprimesingle.cpp  factors.cc  isamicable.cc  isamicable.cpp  isprime.cc  isprime.cpp  largestfactor.cc  largestfactor.cpp  miller_rabin.cc  miller_rabin.cpp  primefacs.cc  primepi.cc  primepi.cpp  primetools.h  propdivsum.cpp  sieve.cc  sieve.cpp  totient.cc  totient.cpp
euler/sequences/: fibonacci.cpp  pisano.cpp  sequences.h
fastmath/: fastmath.h  intlog10.cc  ispowerof2.cc  pow.cc
fileio/: CMakeLists.txt  fileio.cpp  fileio.h
fractions/: CMakeLists.txt  continued.cpp  fractions.cpp  fractions.h
math/: CMakeLists.txt  binom.cpp  factorial.cpp  fastpow.cpp  gcd.cpp  intlog10.cpp  isqrt.cpp  math.cpp  math.h  modinverse.cpp  mulmod.cpp  powmod.cpp  templates.h
probability/: CMakeLists.txt  probability.cpp  probability.h
pythonlike/: CMakeLists.txt  fstring.h  print.h  pythonlike.h  slice.h
stopwatch/: CMakeLists.txt  const-copy.cc  const-move.cc  const1.cc  const2.cc  format.cpp  op-binary1.cc  op-binary2.cc  op-move.cc  profile.cpp  progress.cpp  reset.cc  sleep.cpp  start.cc  stop.cc  stopwatch.cpp  stopwatch.h  time.cc  time.cpp
tests/: CMakeLists.txt  debug.cpp  dodebug.sh  dotests.sh  test_euler.cpp  test_fileio.cpp  test_fractions.cpp  test_main.cpp  test_math.cpp  test_primetools.cpp  test_probability.cpp  test_pythonlike.cpp  test_stopwatch.cpp  test_utility.cpp  tests.cpp
tests/data/: cphmd-coord-1.xvg  text.txt
utility/: CMakeLists.txt  utility.cpp  utility.h
